<resources>
    <string name="app_name">Default App Android</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="recuperar_a_senha">Recuperar a senha</string>
    <string name="logar">Logar</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="enviar">Enviar</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="nome_completo">Nome e sobrenome</string>
    <string name="telefone">Telefone</string>
    <string name="repita_a_senha">Repita a senha</string>
    <string name="recuperar_conta">Recuperar conta</string>
    <string name="criando_conta">Criando conta</string>
    <string name="voltar">Voltar</string>
    <string name="ou">--------------------- OU ---------------------</string>
    <string name="logar_com_google">Logar com Google</string>
    <string name="logar_com_facebook">Logar com Facebook</string>
    <string name="criar_conta">Criar conta</string>
    <string name="confirmar">Confirmar</string>
    <string name="xxxx">XXXX</string>
    <string name="termos_de_uso">Termos de uso</string>
    <string name="texto_termos_de_uso">Texto termos de uso</string>
    <string name="politica_de_privacidade">Política de privacidade</string>
    <string name="texto_politica_de_privacidade">Texto da política de privacidade</string>
    <string name="politica_de_dados">Política de dados</string>
    <string name="texto_politica_de_dados">Texto da política de dados</string>
    <string name="avancar">Avançar</string>
    <string name="dados_login_incorretos">Dados de login incorretos</string>
    <string name="email_invalido">Email inválido</string>
    <string name="senha_curta">Senha muito curta</string>
    <string name="conta_criada_com_sucesso">Conta cadastrada com sucesso!</string>
    <string name="continuando">Continuando</string>
    <string name="rg">RG</string>
    <string name="cpf">CPF</string>
    <string name="cnh">CNH</string>
    <string name="ativo">Ativo</string>
    <string name="reenviar_email">Reenviar email</string>
    <string name="criando_sua_conta">Criando sua conta...</string>
    <string name="sera_enviado_um_email_para_recuperar_a_sua_senha_verifique_sua_caixa_de_entrada_e_spam">Será enviado um email para recuperar a sua senha, verifique sua caixa de entrada e spam.</string>
    <string name="email_enviado_com_sucesso">Email enviado com sucesso!</string>
    <string name="verifique_sua_caixa_de_entrada_e_spam">Verifique sua caixa de entrada e spam</string>
    <string name="user_email_com">user@email.com</string>
    <string name="verifique_sua_conexao_internet">Verifique sua conexão com a internet</string>
    <string name="esse_email_ja_esta_sendo_usado">Esse email já está sendo utilizado em outra conta</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="senha_nao_sao_iguais">Senha não são iguais</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
