<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.login.SignupActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/backgroud_card"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_top_card"
                android:layout_marginLeft="@dimen/margin_card"
                android:layout_marginRight="@dimen/margin_card"
                android:layout_marginBottom="@dimen/margin_card"
                android:gravity="top|center"
                android:background="@drawable/shape_round">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/title_card"
                    android:layout_marginTop="16dp"
                    android:text="@string/criar_conta"/>

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome"
                    android:inputType="textCapSentences"
                    android:layout_marginTop="@dimen/margin_card"
                    android:layout_marginLeft="@dimen/margin_card"
                    android:layout_marginRight="@dimen/margin_card"/>

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="@dimen/margin_card"
                    android:layout_marginLeft="@dimen/margin_card"
                    android:layout_marginRight="@dimen/margin_card"/>

                <EditText
                    android:id="@+id/txtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefone"
                    android:inputType="phone"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/margin_card"
                    android:layout_marginLeft="@dimen/margin_card"
                    android:layout_marginRight="@dimen/margin_card"/>

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/senha"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/margin_card"
                    android:layout_marginLeft="@dimen/margin_card"
                    android:layout_marginRight="@dimen/margin_card"/>

                <EditText
                    android:id="@+id/edtPasswordComfirmed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repita_a_senha"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/margin_card"
                    android:layout_marginLeft="@dimen/margin_card"
                    android:layout_marginRight="@dimen/margin_card"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_card"
                    android:layout_marginRight="@dimen/margin_card"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="Ao me cadastrar eu estou de"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="acordo com os "/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/btn_text_link"
                            android:onClick="termosUso"
                            android:text="termos de uso"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text=", a "/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/btn_text_link"
                            android:onClick="politicaPrivacidade"
                            android:text="política de privacidade"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text=" e a "/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/btn_text_link"
                            android:onClick="politicaDados"
                            android:text="política de dados"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text=" do "/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/app_name"/>

                </LinearLayout>

                <Button
                    android:id="@+id/btnSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_card"
                    android:layout_marginLeft="@dimen/margin_card"
                    android:layout_marginRight="@dimen/margin_card"
                    android:textColor="@color/btn_text_color"
                    android:background="@drawable/btn_round"
                    android:onClick="onSignUp"
                    android:text="@string/criar_conta"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</ScrollView>